2006 12 11
Reduced equifax part of validcertssl to just "equifax secure" and made 
sure it could match all of ssl if followed by a known certificate 
authority. Upgraded socks quality to "good". Improved battlefield2 by 
making it more liberal.

Extended test suite to include use of the GNU library which is used in the
new userspace version. Fixed a long-standing quoting bug which made it 
impossible to see matches if the regex got mangled by bash.  Updated all
speeds (included both libraries' speeds).  Noted several cases where the
existing pattern is not valid for GNU regexps.

2006 10 18
Added tor. Added more standard/proprietary/open_source groups, but moved
all such groups to the ends of the lines because they are less relevant
than others.

2006 09 24
Added stun.  Updated comments in msn-filetransfer and added an example to 
back them up.  Added ares and stun to testing/data/.

2006 09 10
Added some protocol categories.  Added skypeout data.  Added mohaa (Medal of
Honor Allied Assault).

2006 06 03
Improved "lime" packet detection in gnutella.  Fixed and/or tested
skypeout and skypetoskype, they now both work, at least with Skype
1.2.0.18_API on Linux, although skypeout is a rather severe overmatch
(but no longer an undermatch).

2006 05 29
Reformatted wiki links for webpage parsing.  Fixed gkrellm.  Moved
pressplay to extra/.  Renamed "pattern quality" "pattern attributes". 
Added the attributes "superset" and "subset".  Added http-freshdownload.
Downgraded skypeout to "marginal".

2006 05 21
Added http-dap and imesh.

2006 05 11
Added subversion.  Removed stray backslash from edonkey.

2006 04 09
Updated edonkey for some (apparently) new packet types.

2006 03 13
Improved bittorrent.  It, of course, does not match the new encrypted
streams, just more of the other stuff.  Edited edonkey, skypeout, tsp,
xunlei, battlefield2 to remove warnings about control characters. 
Mostly, this was just cosmetic, but in a few cases there were actually bugs.

2006 02 12