@@ -1,7 +1,7 @@
 # RTF - Rich Text Format - an open document format
-# Pattern attributes: good fast subset
+# Pattern attributes: good fast notsofast subset
 # Protocol groups: file
 
 rtf
-# This is not a valid GNU extended regular expression
-{\\rtf[12]
+\{\\rtf[12]
+
