@@ -17,5 +17,5 @@ bittorrent
 # Ditto on the next bit.  Could also match on "user-agent: azureus", but that's in the next
 # packet and perhaps this will match multiple clients.
 
-# This is not a valid basic GNU regular expression.
-\x13bittorrent protocol|d1:ad2:id20:|\x08'7P\)[RP]|^azver\x01$|^get /scrape?info_hash=
+# This is not a valid GNU basic regular expression (but we don't use those).
+\x13bittorrent protocol|d1:ad2:id20:|\x08'7P\)[RP]|^azver\x01$|^get /scrape\?info_hash=
